[package]
name = "candle-rust-ai"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candle-nn = "0.3"
candle-core = "0.3"
candle-datasets = "0.3"
anyhow = "1.0.75"

[features]
cuda = ["candle-nn/cuda", "candle-core/cuda"]